# Arcade

./: .travis.yml  Arcade.txt  CMakeLists.txt  Makefile  README.md  map.txt  map1.txt
GameSrc/: Makefile
GameSrc/Nibbler/: Makefile  Nibbler.cpp  Nibbler.hpp
GameSrc/Pacman/: Makefile  Pacman.cpp  Pacman.hpp
GfxSrc/: Makefile
GfxSrc/Allegro/: Allegro.cpp  Allegro.hpp  Makefile
GfxSrc/Ncurse/: Makefile  Ncurse.cpp  Ncurse.hpp
GfxSrc/SFML/: Makefile  Sfml.cpp  Sfml.hpp
core/: Core.cpp  LibLoader.cpp  Makefile  main.cpp
games_old/Nibbler/: LibNcurses.cpp  LibNcurses.hpp  LibSfml.cpp  LibSfml.hpp  Nibbler.cpp  Nibbler.hpp  main.cpp  map.txt
games_old/Nibbler/lib/: Sfml.cpp  Sfml.hpp
games_old/Pacman/: a.out  main.cpp
games_old/Pacman/assets/: pacman.txt
games_old/Pacman/lib/: Ncurse.cpp  Ncurse.hpp  Sfml.cpp  Sfml.hpp
games_old/Pacman/src/: Pacman.cpp  Pacman.hpp
include/: Core.hpp  IGames.hpp  IGraphicLoader.hpp  LibLoader.hpp
